# chuk-mcp-math-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: arithmetic_basic.yaml  number_theory_only.yaml  prime_focused.yaml  production.yaml  server_config.yaml
debug/: debug_configuration.py  debug_math_functions.py  debug_mcp_server.py  debug_protocol_handler.py  debug_server_response.py  debug_stdio.py  simple_server_debug.py
examples/: http_client_example.py  stdio_client_example.py
src/chuk_mcp_math_server/: __init__.py  _cli.py  _version.py  base_server.py  cli.py  config.py  function_filter.py  math_config.py  math_server.py
tests/: __init__.py  conftest.py  test_function_filter.py  test_server.py
